# porch

./: .gitignore  README.md  client.cpp  docker-compose.yml  event_loop.cpp  event_loop.h  hailmary.py  meson.build  requirements.txt  sender.sh  stream.py  test_server.py  tf_detect.py  yolo_model.py
camserv/: Cargo.toml  README.md  pipeline.dot
camserv/src/: c2.rs  capture.rs  error.rs  main.rs
inferepy/: Cargo.toml  model2onnx.py
inferepy/src/: main.rs
inferers/: Cargo.toml  README.md
inferers/src/: main.rs
proxy/: nginx.conf
receiver-rs/: Cargo.toml
receiver-rs/assets/: index.html
receiver-rs/src/: main.rs
rtsp-server/: Cargo.toml  README.md
rtsp-server/src/: main.rs
streamer/: Cargo.toml  README.md
streamer/src/: main.rs
streamrs/: Cargo.toml  Dockerfile  README.md
streamrs/assets/: index.html
streamrs/src/: main.rs
