[package]
name = "camserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.30"
gstreamer = "0.21.3"
gstreamer-app = "0.21.2"
gstreamer-video = "0.21.2"
image = "0.24.7"
log = "0.4.20"
#reqwest = { version = "0.11.23", features = ["rustls-tls-webpki-roots"] }
#serde = { version = "1.0.195", features = ["derive"] }
#serde_yaml = "0.9.30"
tokio = { version = "1.35.1", features = ["full"] }
#tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
